@@ -198,12 +198,6 @@ THESE ARE UNSCHEDULED BACKLOG TASKS
 * merge get_eyemodel's functionality  as a "view eyemodel"
   sub-command in MGED/Archer.
 
-* make gqa (and other apps that initialize similarly via libged or a
-  wdbip) utilize TIE if LIBRT_BOT_MINTIE is set.  it's bypassing
-  rt_dirbuild() so it never gets to where the environment variable is
-  read.  another case for pushing the environment variable check a
-  little lower (or somewhere in the path that gqa currently takes).
-
 * document gqa centroid and moments of inertia options
 
 * add support for custom and random views to gqa.  provide an option
